fixed content overflow

--- a/style/index.css
+++ b/style/index.css
@@ -199,7 +199,9 @@ body::-webkit-scrollbar-thumb {
 
 #about {
     /* margin-bottom: 80px; */
-    height: 100vh;
+    /* height: 100vh; */
+    min-height: 100vh;
+    /* overflow: auto; */
     padding-top: 100px;
     background-image: url("../images/aboutUsBackground.jpg");
     background-size: cover;
@@ -306,7 +308,7 @@ body::-webkit-scrollbar-thumb {
 #skills {
     padding-top: 100px;
     margin-bottom: 80px;
-    height: 100vh;
+    min-height: 100vh;
     background-image: url("../images/skillsBackground.jpg");
     background-size: cover;
     background-position: center;
